# WinExInfo

./: .gitignore  CMakeLists.txt  CMakePresets.json
.superpowers/sdd/: multi-window-task-c1-report.md
docs/superpowers/evidence/: 2026-07-10-winexinfo-gate-a.md  2026-07-10-winexinfo-gate-b.md  2026-07-11-gate-a-controlled-snapshots.txt  2026-07-11-gate-a-final-action.txt  2026-07-11-gate-a-final-observe.txt  2026-07-11-gate-a-final-snapshot-summary.txt  2026-07-11-winexinfo-hwnd-gate-a.md  2026-07-12-winexinfo-gate-c.md
docs/superpowers/plans/: 2026-07-10-winexinfo-feasibility-gates-a-b.md  2026-07-11-winexinfo-hwnd-tab-identity-gate-a.md  2026-07-12-status-pane-style-navigation.md  2026-07-12-winexinfo-gate-c-explorer-placement.md  2026-07-12-winexinfo-git-status-runtime.md  2026-07-12-winexinfo-install-operations.md  2026-07-12-winexinfo-multi-window-runtime-addendum.md  2026-07-12-winexinfo-production-lifecycle.md
docs/superpowers/specs/: 2026-07-10-winexinfo-git-status-design.md  2026-07-11-winexinfo-hwnd-tab-identity-design.md  2026-07-12-status-pane-style-navigation-design.md
scripts/: build.ps1  run-gate-b.ps1  run-gate-c.ps1  run-production-lifecycle.ps1
src/common/: contracts.h  status.h  utf8.cpp  utf8.h  win32_handle.h
src/hook/: WinExInfoHook.def  dll_main.cpp  explorer_layout.cpp  explorer_layout.h  hook_entry.cpp  hook_entry.h  hook_export.cpp  process_runtime.cpp  process_runtime.h  runtime.cpp  runtime.h  status_pane.cpp  status_pane.h  tab_subclass_set.cpp  tab_subclass_set.h
src/host/: background_coordinator.cpp  background_coordinator.h  com_apartment.h  command_line.cpp  command_line.h  explorer_controller.cpp  explorer_controller.h  explorer_session.cpp  explorer_session.h  main.cpp
src/injection/: hook_platform.cpp  hook_platform.h  thread_hook_injector.cpp  thread_hook_injector.h
src/ipc/: named_pipe.cpp  named_pipe.h  protocol.cpp  protocol.h
src/probe/: event_observer.cpp  event_observer.h  observer_production_runtime.cpp  observer_runtime.cpp  observer_runtime.h  observer_runtime_contract.cpp  observer_runtime_contract.h  probe_runner.cpp  probe_runner.h  probe_types.h  report_writer.cpp  report_writer.h  shell_probe.cpp  shell_probe.h  tab_identity.cpp  tab_identity.h  target_validator.cpp  target_validator.h  uia_observer_worker.cpp  uia_observer_worker.h  uia_probe.cpp  uia_probe.h  win32_probe.cpp  win32_probe.h
tests/: active_view_tests.cpp  background_coordinator_tests.cpp  com_apartment_tests.cpp  command_line_tests.cpp  contracts_tests.cpp  event_filter_tests.cpp  explorer_controller_tests.cpp  explorer_layout_tests.cpp  explorer_session_tests.cpp  hook_controller_mode.cpp  hook_injector_tests.cpp  hook_runtime_tests.cpp  hook_target_mode.cpp  hook_test_modes.cpp  hook_test_modes.h  host_manifest_tests.cpp  ipc_production_tests.cpp  ipc_protocol_tests.cpp  observer_runtime_contract_tests.cpp  observer_runtime_tests.cpp  observer_shell_reconcile_tests.cpp  process_runtime_tests.cpp  production_lifecycle_harness_tests.ps1  status_pane_placement_tests.cpp  tab_identity_tests.cpp  tab_subclass_tests.cpp  target_validation_tests.cpp  test_framework.cpp  test_framework.h  test_main.cpp  uia_contract_tests.cpp  uia_observer_worker_tests.cpp
